--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '18'
 
@@ -31,6 +31,7 @@ jobs:
             const browser = await puppeteer.launch();
             const page = await browser.newPage();
             await page.goto('https://smkh-pro.github.io/CountViews/');
+            await page.waitForTimeout(2000); // Wait for 1 second
             await page.screenshot({ path: 'images/screenshot.png' });
             await browser.close();
           })();
